web-server_and_vpc/securitygroup.tf
resource "aws_security_group" "allow_http" {
    name = "allow_http"
    description = "Allow http access"
    vpc_id = aws_vpc.dev-vpc.id

    ingress {
        description = "allow http connections"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    }
    tags = {
      Name = "allow_http"
    }
}
